--- a/index.html
+++ b/index.html
@@ -425,12 +425,8 @@
                                     <h2 class="text-uppercase">On the quasiconvex hull for a three-well prolem in two dimensional linear elasticity</h2>
                                     <p class="item-intro text-muted">2022</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
-                                    <p><a href="https://arxiv.org/pdf/2012.02871.pdf"> Article</a></p>
+                                    <p><a href="https://arxiv.org/pdf/2012.02871.pdf"> Go to article preview</a></p>
                                     <ul class="list-inline">
-                                        <li>
-                                            <strong>dasdf:</strong>
-                                            Threads
-                                        </li>
                                         <li>
                                             <strong>Topic:</strong>
                                             Calculus of Variations and Partial Differential Equations 
@@ -460,20 +456,16 @@
                                     <h2 class="text-uppercase">Project Name</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p><a href="https://arxiv.org/pdf/2012.06626.pdf"> Go to article preview</a></p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Client:</strong>
-                                            Explore
-                                        </li>
-                                        <li>
                                             <strong>Category:</strong>
-                                            Graphic Design
+                                            Calculus of Variations and Partial Differential Equations
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Close Article
                                     </button>
                                 </div>
                             </div>
