--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/Articulo_2_2.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Published Article</div>
@@ -379,7 +379,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">On the quasiconvex hull for a three-well prolem in two dimensional linear elasticity</h2>
                                     <p class="item-intro text-muted">2022</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_1_1.jpg" alt="..." />
                                     <p><a href="https://arxiv.org/pdf/2012.02871.pdf"> Go to article preview</a></p>
                                     <ul class="list-inline">
                                         <li>
@@ -410,7 +410,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">On the Symmetric Lamination Convez and Quasiconvex Hull for the Coplanar n-well problem in two dimensions</h2>
                                     <p class="item-intro text-muted">2022</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_2_2.jpg" alt="..." />
                                     <p><a href="https://arxiv.org/pdf/2012.06626.pdf"> Go to article preview</a></p>
                                     <ul class="list-inline">
                                         <li>
