--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
             </div>
         </section>
         <!-- Team-->
+        <!--			
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
@@ -291,7 +292,7 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
-                            <h4>Antonio Capella Kort</h4>
+                            <h4>nombre</h4>
                             <p class="text-muted">Lead Designer</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-facebook-f"></i></a>
@@ -324,6 +325,7 @@
                 </div>
             </div>
         </section>
+        -->			
         <!-- Clients-->
         <div class="py-5">
             <div class="container">
