--- a/index.html
+++ b/index.html
@@ -331,16 +331,16 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/python-svgrepo-com(1).svg" alt="..." aria-label="Microsoft Logo" /></a>
+                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/python-svgrepo-com.svg" alt="..." aria-label="Microsoft Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/latex-svgrepo-com(1).svg" alt="..." aria-label="Google Logo" /></a>
+                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/latex-svgrepo-com.svg" alt="..." aria-label="Google Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
                         <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/matlab-svgrepo-com.svg" alt="..." aria-label="Facebook Logo" /></a>
                     </div>
 		   <div class="col-md-3 col-sm-6 my-3">
-                       <img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/arduino-svgrepo-com(2).svg"   alt="..." aria-label="Latex Logo" />
+                       <img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/arduino-svgrepo-com.svg"   alt="..." aria-label="Latex Logo" />
                     </div>
                 </div>
             </div>
