--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/Articulo_3_1.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">In preparation</div>
@@ -445,7 +445,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Nonlinear stability of static Neel walls in ferromagnetic thin films</h2>
                                     <p class="item-intro text-muted">2023</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_3_1.jpg" alt="..." />
                                     <ul class="list-inline">
                                        
                                         <li>
