--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                                        
                                         <li>
                                             <strong>Category:</strong>
-                                            Calculus of Variations and Partial Differential Equations
+                                            Micromagnetism, Sprectral Theory and Nolinear Stability
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
