--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Research</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">Education</a></li>
                         <li class="nav-item"><a class="nav-link" href="#teaching">Teaching</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Advices</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#team">Miscellaneous</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                          
                     </ul>
