--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">On the quasiconvex hull for a three-well prolem in two dimensional linear elasticity</h2>
+                                    <!--<h2 class="text-uppercase">On the quasiconvex hull for a three-well prolem in two dimensional linear elasticity</h2>-->
                                     <p class="item-intro text-muted">2022</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_1_1.jpg" alt="..." />
                                     <p><a href="https://arxiv.org/pdf/2012.02871.pdf"> Go to arXiv</a></p>
