--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 	
 			<pre > 
 				<code class="text-muted">
-			<a href="assets/img/cv-2023-spanish.pdf"> Spanish CV </a> &emsp	<a href="assets/img/cv-2023-spanish.pdf"> English CV
+			<a href="assets/img/cv-2023-spanish.pdf"> Spanish CV </a> 	<a href="assets/img/cv-2023-spanish.pdf"> English CV
 			</a> 
 				</code>
 			</pre>
