--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Education</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted"> </h3>
                 </div>
                 <ul class="timeline">
                     <li class="timeline-inverted">
@@ -245,7 +245,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Teaching</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted"> </h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
